// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The AutoSuggest component should toggle the "showsuggestions" state on focus and blur of the input field 1`] = `
<AutoSuggest
  activeSuggestion={
    Object {
      "index": -1,
    }
  }
  legendTitle=""
  numberOfSuggestions={0}
  onSubmit={[MockFunction]}
  onSuggestionActivate={[MockFunction]}
  onSuggestionSelection={[MockFunction]}
  onTextInput={[MockFunction]}
  placeHolder=""
  query="dam"
  suggestions={
    Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dam",
            "uri": "bag/openbareruimte/03630000003186/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Damloperspad",
            "uri": "bag/openbareruimte/03630000001038/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Damrak",
            "uri": "bag/openbareruimte/03630000003187/",
          },
        ],
        "label": "Straatnamen",
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 3,
            "label": "Damrak 1",
            "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
          },
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "Dam 10",
            "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Damrak 15",
            "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
          },
        ],
        "label": "Monumenten",
      },
    ]
  }
>
  <form
    className="auto-suggest__input
          "
    id="header-search"
    onSubmit={[Function]}
  >
    <fieldset>
      <div
        className="auto-suggest__input-container"
      >
        <label
          className="u-sr-only"
          htmlFor="auto-suggest-textinput"
        >
          zoektekst
        </label>
        <input
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          className="auto-suggest__input-textinput"
          id="auto-suggest-textinput"
          onBlur={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          spellCheck="false"
          type="text"
        />
        <button
          className="qa-search-form__clear auto-suggest__input__clear"
          onClick={[Function]}
          title="Wis zoektekst"
          type="button"
        >
          <Component>
            mock-svg
          </Component>
          <span
            className="u-sr-only"
          >
            Wis zoektekst
          </span>
        </button>
      </div>
      <button
        className="auto-suggest__input__submit qa-search-form-submit"
        disabled={false}
        title="Zoeken"
        type="submit"
      >
        <Component>
          mock-svg
        </Component>
        <span
          className="u-sr-only"
        >
          Zoeken
        </span>
      </button>
    </fieldset>
  </form>
</AutoSuggest>
`;

exports[`The AutoSuggest component should toggle the "showsuggestions" state on focus and blur of the input field 2`] = `
<AutoSuggest
  activeSuggestion={
    Object {
      "index": -1,
    }
  }
  legendTitle=""
  numberOfSuggestions={0}
  onSubmit={[MockFunction]}
  onSuggestionActivate={[MockFunction]}
  onSuggestionSelection={[MockFunction]}
  onTextInput={[MockFunction]}
  placeHolder=""
  query="dam"
  suggestions={
    Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dam",
            "uri": "bag/openbareruimte/03630000003186/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Damloperspad",
            "uri": "bag/openbareruimte/03630000001038/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Damrak",
            "uri": "bag/openbareruimte/03630000003187/",
          },
        ],
        "label": "Straatnamen",
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 3,
            "label": "Damrak 1",
            "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
          },
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "Dam 10",
            "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Damrak 15",
            "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
          },
        ],
        "label": "Monumenten",
      },
    ]
  }
>
  <form
    className="auto-suggest__input
          auto-suggest__backdrop"
    id="header-search"
    onSubmit={[Function]}
  >
    <fieldset>
      <div
        className="auto-suggest__input-container"
      >
        <label
          className="u-sr-only"
          htmlFor="auto-suggest-textinput"
        >
          zoektekst
        </label>
        <input
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          className="auto-suggest__input-textinput"
          id="auto-suggest-textinput"
          onBlur={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          spellCheck="false"
          type="text"
        />
        <button
          className="qa-search-form__clear auto-suggest__input__clear"
          onClick={[Function]}
          title="Wis zoektekst"
          type="button"
        >
          <Component>
            mock-svg
          </Component>
          <span
            className="u-sr-only"
          >
            Wis zoektekst
          </span>
        </button>
      </div>
      <div
        className="auto-suggest__dropdown"
      >
        <h3
          className="auto-suggest__dropdown__tip"
        >
          Enkele suggesties
        </h3>
        <AutoSuggestCategory
          activeSuggestion={
            Object {
              "index": -1,
            }
          }
          category={
            Object {
              "content": Array [
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dam",
                  "uri": "bag/openbareruimte/03630000003186/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 1,
                  "label": "Damloperspad",
                  "uri": "bag/openbareruimte/03630000001038/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 2,
                  "label": "Damrak",
                  "uri": "bag/openbareruimte/03630000003187/",
                },
              ],
              "label": "Straatnamen",
            }
          }
          key="Straatnamen"
          onSuggestionSelection={[Function]}
          query="dam"
        >
          <div
            className="auto-suggest__dropdown-category"
          >
            <h4
              className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
            >
              Straatnamen
            </h4>
            <ul>
              <AutoSuggestItem
                content="Dam"
                isActive={false}
                key="Dam0"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
              <AutoSuggestItem
                content="Damloperspad"
                isActive={false}
                key="Damloperspad1"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>loperspad",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
              <AutoSuggestItem
                content="Damrak"
                isActive={false}
                key="Damrak2"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>rak",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
            </ul>
          </div>
        </AutoSuggestCategory>
        <AutoSuggestCategory
          activeSuggestion={
            Object {
              "index": -1,
            }
          }
          category={
            Object {
              "content": Array [
                Object {
                  "category": "Monumenten",
                  "index": 3,
                  "label": "Damrak 1",
                  "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 4,
                  "label": "Dam 10",
                  "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 5,
                  "label": "Damrak 15",
                  "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
                },
              ],
              "label": "Monumenten",
            }
          }
          key="Monumenten"
          onSuggestionSelection={[Function]}
          query="dam"
        >
          <div
            className="auto-suggest__dropdown-category"
          >
            <h4
              className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
            >
              Monumenten
            </h4>
            <ul>
              <AutoSuggestItem
                content="Damrak 1"
                isActive={false}
                key="Damrak 13"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>rak 1",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
              <AutoSuggestItem
                content="Dam 10"
                isActive={false}
                key="Dam 104"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span> 10",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
              <AutoSuggestItem
                content="Damrak 15"
                isActive={false}
                key="Damrak 155"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>rak 15",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
            </ul>
          </div>
        </AutoSuggestCategory>
      </div>
      <button
        className="auto-suggest__input__submit qa-search-form-submit"
        disabled={false}
        title="Zoeken"
        type="submit"
      >
        <Component>
          mock-svg
        </Component>
        <span
          className="u-sr-only"
        >
          Zoeken
        </span>
      </button>
    </fieldset>
  </form>
</AutoSuggest>
`;

exports[`The AutoSuggest component should toggle the "showsuggestions" state on focus and blur of the input field 3`] = `
<AutoSuggest
  activeSuggestion={
    Object {
      "index": -1,
    }
  }
  legendTitle=""
  numberOfSuggestions={0}
  onSubmit={[MockFunction]}
  onSuggestionActivate={[MockFunction]}
  onSuggestionSelection={[MockFunction]}
  onTextInput={[MockFunction]}
  placeHolder=""
  query="dam"
  suggestions={
    Array [
      Object {
        "content": Array [
          Object {
            "category": "Straatnamen",
            "index": 0,
            "label": "Dam",
            "uri": "bag/openbareruimte/03630000003186/",
          },
          Object {
            "category": "Straatnamen",
            "index": 1,
            "label": "Damloperspad",
            "uri": "bag/openbareruimte/03630000001038/",
          },
          Object {
            "category": "Straatnamen",
            "index": 2,
            "label": "Damrak",
            "uri": "bag/openbareruimte/03630000003187/",
          },
        ],
        "label": "Straatnamen",
      },
      Object {
        "content": Array [
          Object {
            "category": "Monumenten",
            "index": 3,
            "label": "Damrak 1",
            "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
          },
          Object {
            "category": "Monumenten",
            "index": 4,
            "label": "Dam 10",
            "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
          },
          Object {
            "category": "Monumenten",
            "index": 5,
            "label": "Damrak 15",
            "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
          },
        ],
        "label": "Monumenten",
      },
    ]
  }
>
  <form
    className="auto-suggest__input
          auto-suggest__backdrop"
    id="header-search"
    onSubmit={[Function]}
  >
    <fieldset>
      <div
        className="auto-suggest__input-container"
      >
        <label
          className="u-sr-only"
          htmlFor="auto-suggest-textinput"
        >
          zoektekst
        </label>
        <input
          autoCapitalize="off"
          autoComplete="off"
          autoCorrect="off"
          className="auto-suggest__input-textinput"
          id="auto-suggest-textinput"
          onBlur={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          placeholder=""
          spellCheck="false"
          type="text"
        />
        <button
          className="qa-search-form__clear auto-suggest__input__clear"
          onClick={[Function]}
          title="Wis zoektekst"
          type="button"
        >
          <Component>
            mock-svg
          </Component>
          <span
            className="u-sr-only"
          >
            Wis zoektekst
          </span>
        </button>
      </div>
      <div
        className="auto-suggest__dropdown"
      >
        <h3
          className="auto-suggest__dropdown__tip"
        >
          Enkele suggesties
        </h3>
        <AutoSuggestCategory
          activeSuggestion={
            Object {
              "index": -1,
            }
          }
          category={
            Object {
              "content": Array [
                Object {
                  "category": "Straatnamen",
                  "index": 0,
                  "label": "Dam",
                  "uri": "bag/openbareruimte/03630000003186/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 1,
                  "label": "Damloperspad",
                  "uri": "bag/openbareruimte/03630000001038/",
                },
                Object {
                  "category": "Straatnamen",
                  "index": 2,
                  "label": "Damrak",
                  "uri": "bag/openbareruimte/03630000003187/",
                },
              ],
              "label": "Straatnamen",
            }
          }
          key="Straatnamen"
          onSuggestionSelection={[Function]}
          query="dam"
        >
          <div
            className="auto-suggest__dropdown-category"
          >
            <h4
              className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
            >
              Straatnamen
            </h4>
            <ul>
              <AutoSuggestItem
                content="Dam"
                isActive={false}
                key="Dam0"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
              <AutoSuggestItem
                content="Damloperspad"
                isActive={false}
                key="Damloperspad1"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>loperspad",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
              <AutoSuggestItem
                content="Damrak"
                isActive={false}
                key="Damrak2"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>rak",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
            </ul>
          </div>
        </AutoSuggestCategory>
        <AutoSuggestCategory
          activeSuggestion={
            Object {
              "index": -1,
            }
          }
          category={
            Object {
              "content": Array [
                Object {
                  "category": "Monumenten",
                  "index": 3,
                  "label": "Damrak 1",
                  "uri": "monumenten/monumenten/8e8ae1dd-78a2-4a5f-841d-1870631b7e33/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 4,
                  "label": "Dam 10",
                  "uri": "monumenten/monumenten/aa3f9081-2ac4-49ea-95d2-0aad7aecd883/",
                },
                Object {
                  "category": "Monumenten",
                  "index": 5,
                  "label": "Damrak 15",
                  "uri": "monumenten/monumenten/f93e31ba-89eb-4784-87e1-d32c33b5236d/",
                },
              ],
              "label": "Monumenten",
            }
          }
          key="Monumenten"
          onSuggestionSelection={[Function]}
          query="dam"
        >
          <div
            className="auto-suggest__dropdown-category"
          >
            <h4
              className="auto-suggest__dropdown-category__heading qa-auto-suggest-header"
            >
              Monumenten
            </h4>
            <ul>
              <AutoSuggestItem
                content="Damrak 1"
                isActive={false}
                key="Damrak 13"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>rak 1",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
              <AutoSuggestItem
                content="Dam 10"
                isActive={false}
                key="Dam 104"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span> 10",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
              <AutoSuggestItem
                content="Damrak 15"
                isActive={false}
                key="Damrak 155"
                onSuggestionSelection={[Function]}
                query="dam"
              >
                <li>
                  <button
                    className="auto-suggest__dropdown-item "
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="icon"
                    >
                      <Component>
                        mock-svg
                      </Component>
                    </span>
                    <span
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "<span class=\\"auto-suggest__dropdown__highlight\\">Dam</span>rak 15",
                        }
                      }
                    />
                  </button>
                </li>
              </AutoSuggestItem>
            </ul>
          </div>
        </AutoSuggestCategory>
      </div>
      <button
        className="auto-suggest__input__submit qa-search-form-submit"
        disabled={false}
        title="Zoeken"
        type="submit"
      >
        <Component>
          mock-svg
        </Component>
        <span
          className="u-sr-only"
        >
          Zoeken
        </span>
      </button>
    </fieldset>
  </form>
</AutoSuggest>
`;
